src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Attempt_Results__c</fullName>
        <label>Results</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Left Message with Assistant</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <formula>(ABS(Start_Time__c - End_Time__c)) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <formula>IF( AND(CONTAINS(Subject,&quot;Call&quot; ),NOT(CONTAINS(Subject,&quot;Email&quot; ))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF(CONTAINS( Subject ,&quot;Email&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Activity finish time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Approval_Step_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__BPD_ID__c</fullName>
        <description>Holds the id of the Business process this is a part of.  This is only used for events.</description>
        <label>BPD ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The checklist associated with this task.</inlineHelpText>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Completion_Time_Days_Target__c</fullName>
        <formula>if(and(Not(isblank(ActivityDate)),not((ActivityDate - datevalue(CreatedDate))&lt;0)), ActivityDate - datevalue(CreatedDate), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Time Days (Target)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Completion_Time__c</fullName>
        <formula>if(Not(isblank(FSTR__Completed_Date__c)),  FSTR__Completed_Date__c - CreatedDate, 0)</formula>
        <inlineHelpText>Amount of time it took to close this task in days</inlineHelpText>
        <label>Completion Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__ProcessRecordExt__c</fullName>
        <externalId>true</externalId>
        <label>Process Record Ext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates if the task has been read by someone.  Someone viewing the task will cause this to be updated.</inlineHelpText>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id_Ext__c</fullName>
        <externalId>true</externalId>
        <label>Step Id Ext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Takeaway__c</fullName>
        <label>Key Takeaway</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <formula>IF(AND(CONTAINS( Subject ,&quot;meeting&quot;),NOT(CONTAINS( Subject ,&quot;email&quot;))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleOnce__Cancel_reschedule_reason__c</fullName>
        <description>The Cancel/reschedule reason field allows you to track the cancel/reschedule reason provided by the Customer when canceling or rescheduling an activity.</description>
        <inlineHelpText>Cancellation or rescheduling reason provided by the Customer when canceling an activity.</inlineHelpText>
        <label>Cancel/reschedule reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleOnce__Event_status__c</fullName>
        <label>Event status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled (rescheduled by Customer)</fullName>
                </value>
                <value>
                    <fullName>Canceled (reschedule requested by Owner)</fullName>
                </value>
                <value>
                    <fullName>Canceled by Customer</fullName>
                </value>
                <value>
                    <fullName>Canceled by Owner</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No-show</fullName>
                </value>
                <value>
                    <fullName>Rescheduled by Customer</fullName>
                </value>
                <value>
                    <fullName>Rescheduled by Owner</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Activity Start Time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Additional_Emails__c</fullName>
        <inlineHelpText>Enter email addresses of all other participants separated by a comma [,].</inlineHelpText>
        <label>Enter Email Address of Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Duration_of_Meeting__c</fullName>
        <inlineHelpText>Enter the estimated duration of the meeting in &quot;minutes&quot;, as a number.Ex: 30</inlineHelpText>
        <label>Customer Meeting Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Start_Time__c</fullName>
        <inlineHelpText>Enter the starting time of the meeting as per customer.</inlineHelpText>
        <label>Customer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Time_Zone__c</fullName>
        <inlineHelpText>Select the proper time zone location for the customer. DST will be managed automatically.</inlineHelpText>
        <label>Customer Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45/+13:45) Chatham Standard / Daylight Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00/+13:00) New Zealand Standard / Daylight Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30/+11:00) Lord Howe  Standard / Daylight Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00/+11:00) Australian Eastern Standard / Daylight Time (New South Wales) (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+10:30/+9:30) Australian Central Standard / Daylight Time (South Australia) (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korea Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippines Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Kolkata)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__ICS_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sequence of ICS file for invitation email</description>
        <label>ICS_Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_before_host__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow users to join the meeting before the host arrives.</inlineHelpText>
        <label>Enable Join Before Host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Make_it_Zoom_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this to make this event as a zoom &amp; Calendar event. This option will schedule a zoom meeting.</inlineHelpText>
        <label>Schedule a Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Use_personal_Zoom_meeting_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It&apos;s a setting of Zoom meeting.</description>
        <inlineHelpText>Use Zoom personal meeting id for this meeting.</inlineHelpText>
        <label>Use Personal Meeting ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Call_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Call Log</label>
        <referenceTo>zoom_app__Zoom_Call_Log__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Event</label>
        <referenceTo>zoom_app__Zoom_Event__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>